--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,55 @@
 appdirs==1.4.4
-asgiref==3.5.0
+asgiref==3.4.1
 audioread==2.1.9
-certifi==2021.10.8
-cffi==1.15.0
+certifi==2021.5.30
+cffi==1.14.5
 chardet==4.0.0
-cycler==0.11.0
-decorator==5.1.1
-Django==4.0.2
-django-cleanup==6.0.0
-django-cors-headers==3.11.0
-django-mysql==4.5.0
-djangorestframework==3.13.1
+colorclass==2.2.2
+cycler==0.10.0
+decorator==4.4.2
+Django==3.2.7
+django-cleanup==5.2.0
+django-cors-headers==3.8.0
+django-mysql==4.1.0
+djangorestframework==3.12.4
+docopt==0.6.2
 ffmpeg==1.4
-idna==3.3
-imageio==2.15.0
-joblib==1.1.0
-kiwisolver==1.3.2
-librosa==0.9.0
-llvmlite==0.38.0
-matplotlib==3.5.1
-networkx==2.6.3
-numba==0.55.1
-numpy==1.22.2
-opencv-python==4.5.5.62
-packaging==21.3
-Pillow==9.0.1
-pooch==1.6.0
-protobuf==3.19.4
-pycparser==2.21
+idna==2.10
+imageio==2.9.0
+joblib==1.0.1
+kiwisolver==1.3.1
+librosa==0.8.0
+llvmlite>=0.36.0
+matplotlib==3.3.4
+networkx==2.5
+numba>=0.53.0
+numpy==1.20.1
+opencv-python==4.5.1.48
+packaging==20.9
+Pillow==8.3.2
+pip-upgrader==1.4.15
+pooch==1.3.0
+protobuf==3.15.3
+pycparser==2.20
 pydub==0.25.1
-pyparsing==3.0.7
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-pytz==2021.3
-PyWavelets==1.2.0
-requests==2.27.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-dotenv==0.19.0
+pytz==2021.1
+PyWavelets==1.1.1
+requests==2.25.1
 resampy==0.2.2
-scikit-image==0.19.1
-scikit-learn==1.0.2
-scipy==1.8.0
-six==1.16.0
+scikit-image==0.18.1
+scikit-learn==0.24.1
+scipy==1.6.1
+six==1.15.0
 SoundFile==0.10.3.post1
 sqlparse==0.4.2
-tensorboardX==2.4.1
-threadpoolctl==3.1.0
-tifffile==2022.2.2
-torch==1.10.2
-typing-extensions==4.0.1
-urllib3==1.26.8
-wincertstore==0.2.1
+tensorboardX==2.1
+terminaltables==3.1.10
+threadpoolctl==2.1.0
+tifffile==2021.2.26
+torch==1.7.1
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+wincertstore==0.2
